--- a/CerebrumPlugin/CerebrumLogger.csproj
+++ b/CerebrumPlugin/CerebrumLogger.csproj
@@ -16,7 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Com.RusticiSoftware.Cloud.V2" Version="4.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="TinCan" Version="1.3.0" />
   </ItemGroup>
 
